minor changes to force rebuild and see if github pages publish this time

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	    </p>
 		<footer>
     		<ul>
-        		<li><a href="mailto:joshnoorda1250@gmail.com?subject=Hey,%20Demolition%20Brothers">email us</a></li>
+        		<li><a href="mailto:joshnoorda1250+DemoBrothers@gmail.com?subject=Hey,%20Demolition%20Brothers">email us</a></li>
 			</ul>
 		</footer>
 	</body>
