--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Demolition Brothers</title>
-	</head>
-	<body>
-	    <h1>DemoBrothers<h1>
-	    <h2 style="font-style:italic">We'll demolish it!</h2>
-	    <p>
-	        Thank you for visiting Demo Brothers. We'll have real information here real soon.
-	    </p>
-		<footer>
-    		<ul>
-        		<li><a href="mailto:joshnoorda1250+DemoBrothers@gmail.com?subject=Hey,%20Demolition%20Brothers">email us</a></li>
-			</ul>
-		</footer>
-	</body>
+<html lang="en-US">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="1;url=http://mainedemobrothers.wix.com/demobrothers/">
+    <meta name="viewport" content="initial-scale=1,width=device-width,maximum-scale=1"/>
+    <script type="text/javascript">
+      window.location.href = "http://mainedemobrothers.wix.com/demobrothers/"
+    </script>
+  </head>
+  <body>
+    this page has moved <a href="http://mainedemobrothers.wix.com/demobrothers/">here</a>
+  </body>
 </html>
