--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="1;url=http://mainedemobrothers.wix.com/demobrothers/">
     <meta name="viewport" content="initial-scale=1,width=device-width,maximum-scale=1"/>
-    <script type="text/javascript">
-      window.location.href = "http://mainedemobrothers.wix.com/demobrothers/"
-    </script>
   </head>
   <body>
-    this page has moved <a href="http://mainedemobrothers.wix.com/demobrothers/">here</a>
+    <div id="move-msg" style="display:block;">
+        this page has moved <a href="http://mainedemobrothers.wix.com/demobrothers/">here</a>
+    </div>
+    <script type="text/javascript">
+      document.getElementById('move-msg').style.display = "none";
+      setTimeout(function(){
+                    document.getElementById('move-msg').style.display = "block";
+                 }, 2500);
+      window.location.href = "http://mainedemobrothers.wix.com/demobrothers/"
+    </script>
   </body>
 </html>
